--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="68a769">  <td>20/12/23 14:26:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DoubleClick.DragDrop()[pri:0, instance:com.OrangeHrm.DoubleClick@59906517]">DragDrop</td> 
-  <td>main@233996206</td>   <td></td> </tr>
+<tr bgcolor="eed3b9">  <td>20/12/28 11:37:38</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;LoginPage_Grid.launchBrowser()[pri:0, instance:com.OrangeHrm.LoginPage_Grid@80503]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@142555199</td>   <td></td> </tr>
+<tr bgcolor="eed3b9">  <td>20/12/28 11:37:40</td>   <td>1964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage_Grid.LoginWithValidCredentials()[pri:0, instance:com.OrangeHrm.LoginPage_Grid@80503]">LoginWithValidCredentials</td> 
+  <td>main@142555199</td>   <td></td> </tr>
 </table>
